crates/tests/src/snapshots/fe_compiler_tests__compile_errors__call_undefined_function_on_contract.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: no function `doesnt_exist` exists this contract
  ┌─ [snippet]:3:3
  │
3 │   self.doesnt_exist()
  │   ^^^^^^^^^^^^^^^^^ undefined function


